第二三章校正

--- a/report/05-aqi-des.Rmd
+++ b/report/05-aqi-des.Rmd
@@ -244,20 +244,21 @@ knitr::kable(tab4, row.names =F, align = "l", caption="城市基本情况概述"
 
 （二）数据预处理
 
-由于各城市月度固定资产投资数据均为累计值，非单月指标，因此，对于固定资产投资，采用
-后一期减前一期的计算方法，得出本月值。同时由于1-2月为累计值，春节期间不单独对单月
-数据进行统计，因此，文本采用取平均值的方法，用1-2月累计值的平均值作为1、2月单月数据。
+由于各城市月度固定资产投资数据均为累计值，非单月指标，因此，对于固定资产投资，采
+用后一期减前一期的计算方法，得出本月值。同时由于1-2月为累计值，春节期间不单独对
+单月数据进行统计，因此，文本采用取平均值的方法，用1-2月累计值的平均值作为1、2月
+单月数据。
 
-对于部分缺失数据，比如太原市2017年城市公路客运量，乌鲁木齐市2017年常住人口，由于城市
-公路客运量和常住人口在不同年度变化幅度不是太大，因此，直接将2016年太原市城市公路客运量
-和2016年乌鲁木齐市的常住人口作为2017年的数据进行填充。对于私人汽车拥有量这一指标，比如
-呼和浩特市，已有的数据为2014年私人汽车拥有量和2014、2017年民用汽车拥有量，用2014年私人
-汽车拥有量在民用汽车拥有量中的占比乘以2017年民用汽车拥有量作为2017年私人汽车拥有量的
-数据，2014年私人汽车拥有量加2014-2017年的平均增长量作为2015年的数据，同样2016年的数据
-也是在2014年数据的基础上加两年平均增长量。对于全社会用电量这一指标，比如昆明市，已有
-2014、2017年的数据，用2014、2017年数据的平均值作为2015年和2016年的数据。其他城市这些
-指标的缺失值均采用类似的方法进行处理。对于气象因素中缺失数据的处理，均采用上年同期数据
-对本年当期数据进行填充。
+对于部分缺失数据，比如太原市2017年城市公路客运量，乌鲁木齐市2017年常住人口，由于
+城市公路客运量和常住人口在不同年度变化幅度不是太大，因此，直接将2016年太原市城市
+公路客运量和2016年乌鲁木齐市的常住人口作为2017年的数据进行填充。对于私人汽车拥有
+量这一指标，比如呼和浩特市，已有的数据为2014年私人汽车拥有量和2014、2017年民用汽
+车拥有量，用2014年私人汽车拥有量在民用汽车拥有量中的占比乘以2017年民用汽车拥有量
+作为2017年私人汽车拥有量的数据，2014年私人汽车拥有量加2014-2017年的平均增长量作
+为2015年的数据，同样2016年的数据也是在2014年数据的基础上加两年平均增长量。对于全
+社会用电量这一指标，比如昆明市，已有2014、2017年的数据，用2014、2017年数据的平均
+值作为2015年和2016年的数据。其他城市这些指标的缺失值均采用类似的方法进行处理。对
+于气象因素中缺失数据的处理，均采用上年同期数据对本年当期数据进行填充。
 
 对于工业污染治理完成投资和废气污染治理投资，各城市并未公布具体数据，但其对空气质
 量的好坏有很大程度的影响。我们可以从中国统计年鉴中获得各城市所在各省份的工业污染
@@ -266,12 +267,13 @@ knitr::kable(tab4, row.names =F, align = "l", caption="城市基本情况概述"
 在省份生产总值的比重乘以所在省份工业污染治理完成投资和废气污染治理投资作为各城市
 这两个变量的数据。
 
-由于要进行月度分析，在所获得的数据中，针对非月度数据，需要采用合适的频率转化方法进行频率
-转化，转为月度数据进行分析。经济指标的数据类型可以分为存量与流量数据，对于地区生产总值、
-城市公路客运量、房屋建筑施工面积、全社会用电量、工业二氧化硫排放量、工业烟粉尘排放量、
-废气污染治理投资这些流量数据，季度地区生产总值除以3作为月度地区生产总值的近似，其他年度
-数据均采用年度数据除以12的方法将数据平均分配到各月中。对于常住人口、建成区绿化覆盖率、
-私人汽车拥有量这些存量数据，均将年末值作为各月值进行分析。
+由于要进行月度分析，在所获得的数据中，针对非月度数据，需要采用合适的频率转化方法
+进行频率转化，转为月度数据进行分析。经济指标的数据类型可以分为存量与流量数据，对
+于地区生产总值、城市公路客运量、房屋建筑施工面积、全社会用电量、工业二氧化硫排放
+量、工业烟粉尘排放量、废气污染治理投资这些流量数据，季度地区生产总值除以3作为月
+度地区生产总值的近似，其他年度数据均采用年度数据除以12的方法将数据平均分配到各月
+中。对于常住人口、建成区绿化覆盖率、私人汽车拥有量这些存量数据，均将年末值作为各
+月值进行分析。
 
 ## 城市空气质量状况描述
 
