--- a/report/05-aqi-gamm.Rmd
+++ b/report/05-aqi-gamm.Rmd
@@ -234,7 +234,7 @@ Logistic可加混合模型进行相应分析。最后在这些可选模型中通
 几何、贝叶斯统计和凸分析。lasso是为了提高回归模型的预测精度和可解释性而引入的，
 其进行变量筛选的方法是强制回归系数绝对值之和小于一个固定值，从而强制将某些系数
 设置为零，进而有效地选择一个不包含这些系数的更简单的模型，通过改变模型拟合过程，
-只选择提供的协变量的子集用于最终模型，而不是使用所有协变量。
+只选择提供的自变量的子集用于最终模型，而不是使用所有自变量。
 
 因此，首先对不同模型采用相应的lasso变量筛选的方法进行自变量筛选。在我们所涉及的
 模型中，主要涉及线性回归模型、线性混合模型、可加混合模型、广义线性模型、广义线性
