--- a/report/03-estimation.Rmd
+++ b/report/03-estimation.Rmd
@@ -32,9 +32,9 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 广义可加混合模型参数估计 
 ## 广义可加混合模型
-假如 $n$ 个单位中的第 $i$ 个观测对象包含一个因变量 $y_i$ ,和 $p$ 个与固定效应相联系的协变量
+假如 $n$ 个单位中的第 $i$ 个观测对象包含一个因变量 $y_i$ ,和 $p$ 个与固定效应相联系的自变量
  $x_{i}=\left(1, x_{i 1}, \ldots, x_{i p}\right)^{\mathrm{T}}$ 以及 $q$ 个与随机效应相联系的
-协变量 $z_{i}$ 。给定1个 $q\times 1$ 维的随机效应向量 $b$ ，并且假定因变量 $y_i$ 满足
+自变量 $z_{i}$ 。给定1个 $q\times 1$ 维的随机效应向量 $b$ ，并且假定因变量 $y_i$ 满足
 条件独立，其均值为 $E\left(y_{i}|b\right)=\mu_{i}^{b}$ ,方差为
  $\operatorname{var}\left(y_{i}|b\right)=\phi m_{i}^{-1} v\left(\mu_{i}^{b}\right)$ ,
  $v(\cdot)$ 表示一个具体的方差函数， $m_i$ 表示先验权重（例如一个二项分母）， $\phi$ 是一个尺度参数，以下给出的是一个广义可加模型。
@@ -45,7 +45,7 @@ $$g\left(\mu_{i}^{b}\right)=\beta_{0}+f_{1}\left(x_{i 1}\right)+\ldots+f_{p}\lef
 机效应 $b$ 被假定服从分布 $N\sim (0,D(\theta))$ 并且 $\theta$ 是一个 $c\times1$ 的方差成分
 向量。
 
-GAMM[@eq:m-99-1]的一个关键特征是，用加性非参数函数来构建协变量效应，用随机效应来描述观测之间的相关
+GAMM[@eq:m-99-1]的一个关键特征是，用加性非参数函数来构建自变量效应，用随机效应来描述观测之间的相关
 性。如果 $f_j(\cdot)$ 是一个线性函数，GAMM[@eq:m-99-1]约等于Breslow和Clayton的GLMM(1993)[@Breslow1993]。Zeger和
 Diggle(1994)和Zhang等人(1998)考虑了GAMM[@eq:m-99-1]的一个特例，一个半参数混合模型，他们假设了一个
 单非参数的时间函数 $f(\cdot)$ 和具有正态分布因变量的纵向数据[@Zeger1994;@Zhang1998]。
@@ -83,7 +83,7 @@ $$l\left\{y ; \beta_{0}, f_{1}(\cdot), \ldots, f_{p}(\cdot), \theta\right\}-\fra
 \sum_{j=1}^{p} \lambda_{j} \int_{s_{j}}^{t_{j}} f_{j}^{T T}(x)^{2} \mathrm{d} 
 x=l\left(y ; \beta_{0}, f_{1}, \ldots, f_{p}, \theta\right)-\frac{1}{2} \sum_{j=1}^{p} 
 \lambda_{j} f_{j}^{\mathrm{T}} K_{j} f_{j}$$ {#eq:m-99-3}
-其中 $(s_j,t_j)$ 定义了第 $j$ 个协变量的范围，并且 $\lambda=(\lambda_1,\cdots,\lambda_p)$ 
+其中 $(s_j,t_j)$ 定义了第 $j$ 个自变量的范围，并且 $\lambda=(\lambda_1,\cdots,\lambda_p)$ 
 是光滑参数的一个向量，权衡拟合优度和被估计函数的光滑度。这里 $f_j$ 是 $f_j(\cdot)$ 在
 $x_{ij}(i=1,\cdots,n)$ 的 $r_j$ 阶不同值处取值的一个 $r_j \times 1$ 的未知向量，$K_j$ 
 是相应的非负且维数确定的光滑矩阵。
@@ -105,17 +105,17 @@ $\boldsymbol 1$ 是一个 $n\times 1$ 维的向量，$N_j$ 是一个 $n\times r_
 最大化式 [@eq:m-99-3] 通常要求复杂的数值积分，所以对 [@eq:m-99-3] 的
  $l\left(y ; \beta_{0}, f_{1}, \ldots, f_{p}, \theta\right)$ 应用拉普拉斯方法来近似计算
 (Tierney和Kadane, 1986)[@Tierney1986]。将 [@eq:m-99-3] 的最终近似值最大化，
-就会得到近似的 $f_j$ 的自然三次样条估计量。注意，这种逼近对于具有恒等连接函数的正态分布
+就会得到近似的 $f_j$ 的自然立方样条估计量。注意，这种逼近对于具有恒等连接函数的正态分布
 结果是精确的。具体地说，我们通过对被积函数的指数进行二次展开式，求出积分前的最大
  值，从而得到近似 [@eq:m-99-2] 。忽略由此得到的拉普拉斯近似的第一行列式
- 项(Breslow和Clavton. 1993)，一些计算表明，近似的自然三次光滑样条估计量 $\left(\hat \beta_{0},\hat f_{1},\ldots,\hat f_{p} \right)$ 
+ 项(Breslow和Clavton. 1993)，一些计算表明，近似的自然立方光滑样条估计量 $\left(\hat \beta_{0},\hat f_{1},\ldots,\hat f_{p} \right)$ 
 可以通过最大化以下的关于对 $\left(\beta_{0}, f_{1}, \ldots, f_{p},\right)$ 及
  $b$ 的双重惩罚拟似然得到:
 
 $$-\frac{1}{2 \phi} \sum_{i=1}^{n} d_{i}\left(y_{i} ; \mu_{i}^{b}\right)-\frac{1}{2} b^{\mathrm{T}} D^{-1} b-\frac{1}{2} \sum_{j=1}^{p} \lambda_{j} f_{j}^{\mathrm{T}} K_{j} f_{j}$$ {#eq:m-99-5}
 
 第一惩罚项 $b^{\mathrm{T}}D^{-1}b/2$ 来自于公式 [@eq:m-99-2] 的拉普拉斯近似，第
-二惩罚项 $\lambda_{j}f_{j}^{\mathrm{T}}K_{j}f_{j}/2$来自于 $f_j$ 的自然三次光滑样条性质。
+二惩罚项 $\lambda_{j}f_{j}^{\mathrm{T}}K_{j}f_{j}/2$来自于 $f_j$ 的自然立方光滑样条性质。
 
 对式 [@eq:m-99-5] 求关于 $\left(\beta_{0}, f_{1}, \ldots, f_{p}\right)$ 和 $b$ 的导数，
 可以得到它们的估计量：
@@ -167,8 +167,8 @@ $$g\left(\mu^{b}\right)=X \beta+B a+Zb$$ {#eq:m-99-10}
 其中 $X=\left(1, N_{1} X_{1}, \ldots, N_{p} X_{p}\right)$ ；
 $B=\left(N_{1} B_{1}, \ldots, N_{p} B_{p}\right)$, 
 $\beta=\left(\beta_{0}, \ldots, \beta_{p}\right)^{\mathrm{T}}$ 是回归系数的
-$(p+1) \times 1$ 维向量[@Breslow1993]。 $a$ 和 $b$ 是分别满足分布 $a \sim N(0, \Lambda)$ 和
-$b\sim N(0, D)$ 的独立随机效应。DPQL估计量 $\hat{f}_{j}$ 的计算可表示为
+$(p+1) \times 1$ 维向量[@Breslow1993]。 $a$ 和 $b$ 是分别满足分布 $a \sim \mathcal{N}(0, \Lambda)$ 和
+$b\sim \mathcal{N}(0, D)$ 的独立随机效应。DPQL估计量 $\hat{f}_{j}$ 的计算可表示为
  $\hat{f}_{j}=X_{j} \hat{\beta}_{j}+B_{j} \hat{a}_{j}$ ，这是Breslow和Clayton(1993)
 使用惩罚拟似然法估计的固定效应 $\hat{\beta}_{j}$ 与式 [@eq:m-99-10] 所示的GLMM模型中随机效应
 $\hat a_j$ 的线性组合，并且可以使用现有的统计软件如SAS macro GLIMMIX(Wolfinger,1996),
@@ -185,10 +185,10 @@ $$\left(\begin{array}{ccc}{X^{\mathrm{T}} W X} & {X^{\mathrm{T}} W B} & {X^{\mat
 由式 [@eq:m-99-11] 考察可知，它对应于线性混合模式下 $\beta$ 和 $(a,b)$ 的最佳线性无偏预测量(BLUPs)的
 正态方程 ,其线性混合模型为：
 
-$$Y=X \beta+B a+Z b+\epsilon$$ {#eq:m-99-12}
+$$Y=X \beta+B a+Z b+\varepsilon$$ {#eq:m-99-12}
 
-其中 $a$ 和 $b$ 是分别满足分布 $a\sim N(0, \Lambda)$ 和 $b\sim N(0, D)$ 的独立随机效应。并且
- $\epsilon \sim N\left(0, W^{-1}\right)$ 。这表明DPQL的估计量 $\hat f_j$ 和随机
+其中 $a$ 和 $b$ 是分别满足分布 $a\sim \mathcal{N}(0, \Lambda)$ 和 $b\sim \mathcal{N}(0, D)$ 的独立随机效应。并且
+ $\varepsilon \sim \mathcal{N}\left(0, W^{-1}\right)$ 。这表明DPQL的估计量 $\hat f_j$ 和随机
  效应估计量 $b$ 可以使用最佳线性无偏预测(BLUP)， 
  通过迭代拟合工作向量 $Y$ 的模型 [@eq:m-99-12] 来得到。
 
@@ -207,14 +207,14 @@ $$\left(X_{j}, B_{j}\right) \operatorname{Cov}\left(\hat{\beta}_{j}, \hat{a}_{j}
 $H^{-1}H_{0}H^{-1}$ 模块获得。这里假设 $f_{j}(\cdot)$ 是计算 $f_{j}$ 协方差的固定光滑函数。
 
 ### 贝叶斯函数及推断
-下面讨论如何从贝叶斯角度推导在上面讨论的 $f_j$ 的自然三次光滑样条估计
+下面讨论如何从贝叶斯角度推导在上面讨论的 $f_j$ 的自然立方光滑样条估计
 量;以及如何像Wahba(1983)和Zhang等人(1998)一样，推导 $f_j$ 的贝叶斯标准误差，作
 为频率标准误差的替代。这些标准误差将用于构造 $f_j$ 的置信区间，并
 且对它们的进行比较[@wahba1983bayesian;@Zhang1998]。
 
-我们首先考虑在贝叶斯框架下推导f的自然三次光滑样条估计量。假设 $f_j$ 已作中心化处
+我们首先考虑在贝叶斯框架下推导f的自然立方光滑样条估计量。假设 $f_j$ 已作中心化处
 理，并有先验对数密度，其核为$-\lambda_{j} f_{j}^{\mathrm{T}} K_{j} f_{j} / 2$ 。 由
-式 [@eq:m-99-3] 可以很容易地看出，$f$ 的全自然三次光滑样条估计量，是积分拟似然函数
+式 [@eq:m-99-3] 可以很容易地看出，$f$ 的全自然立方光滑样条估计量，是积分拟似然函数
 $l\left(y ; \beta_{0}, f_{1}, \ldots, f_{p}, \theta\right)$ 的后验模态。
  $\hat {f_j}$ 的DPQL估计器是这些后验模态的近似。或者遵循Wahba(1978)的做法，通过假设中
 心化的，部分不正确的 $f_j$ 积分维纳先验，可以得到 $\hat {f_j}$ 
@@ -227,10 +227,10 @@ $$B_{j}=\left(I-\mathbf 1 \mathbf 1^{\mathrm{T}}/r_{j}\right)\Sigma_{j}^{1/2}$$
 
 这种贝叶斯光滑样条公式促使我们考虑计算 $f_j$ 的贝叶斯标准误差，类似于Wahba(1983)和Zhang等
 人(1998)给出的贝叶斯标准误差[@wahba1983bayesian;@Zhang1998]。为了说明，首先考虑经典的非参数回归模型：
-$$y_{i}=f\left(x_{i}\right)+\epsilon_{i}$$ {#eq:m-99-15}
+$$y_{i}=f\left(x_{i}\right)+\varepsilon_{i}$$ {#eq:m-99-15}
 
-其中，$\epsilon_{i}$ 是服从正态分布 $N\left(0,\sigma^{2}\right)$ 的独立随机效应。 Wahba 
-(1983)曾建议在给定以上先验的条件下，用 $\hat{f}$ 的后验协方差来估计 自然三次光滑样条估计
+其中，$\varepsilon_{i}$ 是服从正态分布 $N\left(0,\sigma^{2}\right)$ 的独立随机效应。 Wahba 
+(1983)曾建议在给定以上先验的条件下，用 $\hat{f}$ 的后验协方差来估计 自然立方光滑样条估计
 量 $\hat{f}$ 的协方差。令 $A=\left(I+\sigma^{2} \lambda K\right)^{-1}$ ， $K$ 是光滑矩阵[@wahba1983bayesian]。
  $\hat f$ 的贝叶斯协方差矩阵为 $\sigma^{2}A$ ，而它的频率对应矩阵为 $\sigma^{2} A^{2}$ ，并通
 过假设真实的 $f(\cdot)$ 为一个固定的光滑函数来计算(Hastie and Tibshirani(1990)，第3.8.1节)[@hastie1990generalized]。
@@ -274,7 +274,7 @@ $\lambda$ 和 $\theta$ [@wahba1985comparison;@kohn1991performance;@Zhang1998]。
 在经典的非参数回归模型 [@eq:m-99-15] 下，Wahba(1985)和Kohn等人(1991)提出通过最大化边际似然估计
 光滑参数 $\lambda$ [@wahba1985comparison;@kohn1991performance]。通过假设 $f(x)$ 有一个特定先验来构造 $\tau=1 / \lambda$ 的边际似
 然，该特定先验如式 [@eq:m-99-8] 的形式，其中
-$a\sim N(0,\tau I)$ ，$\beta$ 有平坦先验，并且对 $a$ 和 $\beta$ 积分如式 [@eq:m-99-17]：
+$a\sim \mathcal{N}(0,\tau I)$ ，$\beta$ 有平坦先验，并且对 $a$ 和 $\beta$ 积分如式 [@eq:m-99-17]：
 $$\exp \left\{l_{\mathrm{M}}\left(y ; \tau, \sigma^{2}\right)\right\} \propto \tau^{-1 / 2} 
 \int \exp \left\{l\left(y ; \beta, a, \sigma^{2}\right)-\frac{1}{2 \tau} a^{\mathrm{T}} 
 a\right\} \mathrm{d} a \mathrm{d} \beta$$ {#eq:m-99-17}
@@ -282,8 +282,8 @@ a\right\} \mathrm{d} a \mathrm{d} \beta$$ {#eq:m-99-17}
 Wahba(1985)将 $\tau$ 的最大边际似然估计量称为广义最大似然估计量。Speed(1991)和Thompson
 (1985)指出 $\tau$ 的边际似然 [@eq:m-99-17] 实际上是线性混合模型下的限制极大
 似然估计：
-$$y=\mathbf{1} \beta_{0}+X \beta_{1}+B a+\epsilon$$ 
-其中 $a \sim N(0, \tau I)$ ， $\epsilon \sim N\left(0, \sigma^{2} I\right)$ ;
+$$y=\mathbf{1} \beta_{0}+X \beta_{1}+B a+\varepsilon$$ 
+其中 $a \sim \mathcal{N}(0, \tau I)$ ， $\varepsilon \sim \mathcal{N}\left(0, \sigma^{2} I\right)$ ;
 $\tau$ 被看作方差成分[@Speed1991;@Thompson1985]。
 因此 $\tau$ 的最大边际似然估计量是一个限制极大似然估计量。
 Kohn等人(1991)的大量模拟研究表明，在估计非参数函数时， $\tau$ 的最大边际似然估计量与其
@@ -292,16 +292,16 @@ Kohn等人(1991)的大量模拟研究表明，在估计非参数函数时， $\t
 Zhang等人(1998)将这些研究结果扩展为：对因变量为正态分布且具有非参数均值函数的纵向数据，
 使用限制极大似然联合估计光滑参数 $\lambda$ 和 $\theta$ [@Zhang1998]。其模型的一个有代表性的特例可以
 写成：
-$$y=f(X)+Z b+\epsilon$$ {#eq:m-99-18}
-其中 $f(X)$ 表示非参数函数 $f(\cdot)$ 在$X(n \times 1), b \sim N\{0, D(\theta)\}$ 和
-$\epsilon \sim N\{0, G(\theta)\}$ 设计点处的取值。如果 $f(\cdot)$ 
-是由自然三次光滑样条估计的，使用了式 [@eq:m-99-8] ，则Zhang等人(1998)可将模型 [@eq:m-99-18] 
+$$y=f(X)+Z b+\varepsilon$$ {#eq:m-99-18}
+其中 $f(X)$ 表示非参数函数 $f(\cdot)$ 在$X(n \times 1), b \sim \mathcal{N}\{0, D(\theta)\}$ 和
+$\varepsilon \sim \mathcal{N}\{0, G(\theta)\}$ 设计点处的取值。如果 $f(\cdot)$ 
+是由自然立方光滑样条估计的，使用了式 [@eq:m-99-8] ，则Zhang等人(1998)可将模型 [@eq:m-99-18] 
 改写为线性混合模型
-$$y=1 \beta_{0}+X \beta_{1}+B a+Z b+\epsilon$$ {#eq:m-99-19}
-其中 $a \sim N(0, \tau I)$ ，$b$ 和 $\epsilon$ 的分布与 [@eq:m-99-18] 中的相同[@Zhang1998]。
+$$y=1 \beta_{0}+X \beta_{1}+B a+Z b+\varepsilon$$ {#eq:m-99-19}
+其中 $a \sim \mathcal{N}(0, \tau I)$ ，$b$ 和 $\varepsilon$ 的分布与 [@eq:m-99-18] 中的相同[@Zhang1998]。
 因此，他们提出将模型[@eq:m-99-19]中的 $\tau$ 作为 $\theta$ 之外的一个额外方差分量，并利用
 限制极大似然联合估计 $\lambda$ 和 $\theta$ 。利用Harville(1974)的结果，这个限制极大似然对应
-$(\tau, \theta)$ 的边际似然，即假设 $f$ 为[@eq:m-99-8]形式，$a \sim N(0, \tau I)$ ，$\beta$ 
+$(\tau, \theta)$ 的边际似然，即假设 $f$ 为[@eq:m-99-8]形式，$a \sim \mathcal{N}(0, \tau I)$ ，$\beta$ 
 有平坦先验，并且对 $a$ 和 $\beta$ 积分可得到:
 $$\exp \left\{l_{\mathrm{M}}(y ; \tau, \theta)\right\} \propto|D|^{-1 / 2} \tau^{-1 / 2} \int \exp 
 \left\{l(y ; \beta, a, b)-\frac{1}{2} b^{\mathrm{T}} D^{-1} b-\frac{1}{2 \tau} a^{\mathrm{T}} 
@@ -318,7 +318,7 @@ a\right\} \mathrm{d} b \mathrm{d} a \mathrm{d} \beta$$ {#eq:m-99-20}
 似然方法，并通过最大化边际拟似然联合估计 $\tau$ 和 $\theta$ 
 [@wahba1985comparison;@kohn1991performance;@Zhang1998]。具体地说，GLMM表达式
 [@eq:m-99-10]表明，我们可以将 $\tau$ 视为 $\theta$ 之外的额外方差分量。与[@eq:m-99-20]相似，假设
- $f_j$ 为[@eq:m-99-8]形式， $a_j \sim N(0, \tau_j I)(j=1,\cdots,p)$ ， $\beta$ 有平坦先验，并且对 
+ $f_j$ 为[@eq:m-99-8]形式， $a_j \sim \mathcal{N}(0, \tau_j I)(j=1,\cdots,p)$ ， $\beta$ 有平坦先验，并且对 
  $a_j$ 和 $\beta$ 积分可得到如下表达式:
  $$\begin{split}
  {\exp \left\{l_{\mathrm{M}}(y ; \tau, \theta)\right\} \propto|\Lambda|^{-1 / 2} \int \exp 
@@ -387,7 +387,7 @@ $\hat \theta$ 的估计标准误差有良好的统计性质，与经验值非常
 可以通过使用Breslow和Clavton(1993)以及Lee和Nelder(1996)惩罚拟似然方法拟合GLMM
 [@eq:m-99-10] 模型容易实现[@Breslow1993;@Lee1996]。等价地，只需将工作线性混合模
 型 [@eq:m-99-12] 迭代拟合到工作向量 $Y$ 上；并使用 $\beta_{j}$ 、 
-$a_{j}$ 的BLUP估计量，构造近似的自然三次样条估计量  $\hat{f}_{j}$ ;并利用限制极大似然来估计 $\theta$ 和 $\tau$ 。
+$a_{j}$ 的BLUP估计量，构造近似的自然立方样条估计量  $\hat{f}_{j}$ ;并利用限制极大似然来估计 $\theta$ 和 $\tau$ 。
 
 ## 双重惩罚拟似然偏差校正
 当数据稀疏(如二分类数据)时，基于拉普拉斯近似的常规理论可能不再适用(Lin 和
@@ -402,8 +402,8 @@ Zhang (1999) 模拟研究结果显示，在这种情况下，非参数函数$f_j
 $$g\left(\mu_{i}^{b}\right)=\beta_{0}+f_{1}\left(x_{i 1}\right)+\ldots+f_{p}\left(x_{i 
 p}\right)+\sum_{k=1}^{c} z_{i k}^{\mathrm{T}} b_{k}$$ {#eq:m-99-24}
 其中随机效应 $b_{k}\left(q_{k} \times 1\right)$ 是独立的，服从分布
-$b_{k} \sim N\left(0, \theta_{k} I_{q_{k}}\right)$ ，并且 $z_{i k}$ 是一个 $q_{k} \times 1$
-维的协变量向量[@lin1996bias]。这种随机效应结构在多水平(层次)研究中很常见，比如多中心临床试验，其中指定了
+$b_{k} \sim \mathcal{N}\left(0, \theta_{k} I_{q_{k}}\right)$ ，并且 $z_{i k}$ 是一个 $q_{k} \times 1$
+维的自变量向量[@lin1996bias]。这种随机效应结构在多水平(层次)研究中很常见，比如多中心临床试验，其中指定了
 中心、医生和患者的随机效应，以及在纵向研究中指定了随机截取值。
 
 修正后的 $\theta$ DPQL估计量有如下构成：
@@ -476,7 +476,7 @@ $$K[r, s]^{r}=-K[r, s]^{-1} K[s+1, m]$$
 $$\mu[r, s]=\tau^{2}\left\{\begin{array}{ll}{K[r, s]^{r} f[s+1, m]} & {r=1} \\ {K[r, s]^{l} f[1, r-1]} & {s=m} \\ {K[r, s]^{l} f[1, r-1]+K[r, s]^{r} f[s+1, m]} & {\text {其他}}\end{array}\right.$$
 Knorr-Held(1999)在动态模型中的条件先验方案参考了自回归先验，精度矩阵 $K$ 有非零的诊断带，意
 味着 $K[r, s]^{r}$  和 $K[r, s]$ 的稀疏结构大部分元素是0[@Knorrheld1999]。例如，对于一阶随机游走，仅
-有 $K[r, s]^{r}$ 的第一列和 $K[r, s]$ 的最后一列包含有非零元素。对于稀疏协变量，精度矩阵
+有 $K[r, s]^{r}$ 的第一列和 $K[r, s]$ 的最后一列包含有非零元素。对于稀疏自变量，精度矩阵
 不再有包含置信区间的诊断，但仍然是稀疏的，有非零条目反映相邻关系，因此稀疏矩阵运算可以用来提
 高计算效率。为了得到条件先验方案 $f^{*}[r, s]$ ，均值 $\mu[r, s]$ 和协方差矩阵
 $\Sigma[r, s]^{1 / 2}$ 的计算要以如下方式进行：对于每个模块 $[r,s]$ ,首先计算矩
@@ -486,7 +486,7 @@ $\Sigma[r, s]^{1 / 2}$ 的计算要以如下方式进行：对于每个模块 $[
 量 $\tau^2$ 相乘。从计算的角度来看，贝叶斯方法另一个主要优势是接受概率的简单形式。只有似然值必须被
 计算， 而不涉及一阶或二阶导数等，因此大大减少了计算量。
 
-方差参数 $\tau^2$ 的充分条件仍是一个反伽马分布,
+方差参数 $\tau^2$ 的充分条件仍是一个逆伽玛分布,
 $$
 p\left(\tau^{2} | \cdot\right) \propto \operatorname{IG}\left(a^{T}, c^{T}\right)
 $$
@@ -494,7 +494,7 @@ $$
 $$\begin{array}{c}{a^{T}=a+\frac{1}{2} \operatorname{rank}(K)} \end{array}$$
 和
 $${c^{T}=c+\frac{1}{2} f^{T} K f}$$
-因此，方差参数的更新可以通过简单的Gibbs抽样进行，从反伽马的密度函数中直接提取。同样快速的实
+因此，方差参数的更新可以通过简单的Gibbs抽样进行，从逆伽玛的密度函数中直接提取。同样快速的实
 现需要有 $f^{T} K f$ 的稀疏矩阵相乘。
 
 对于固定效应参数，由于有离散先验 $p(\beta_j)$ ,因此，$\beta$ 的充分条件是
@@ -519,7 +519,7 @@ $$p\left(b_{g} | \cdot\right) \propto \prod_{i \in\left\{j : g_{j}=g\right\}} L_
 进混合性能，有时需要通过将方案中的先验方差 $v^2$ 乘以一个常数因子来进行调优，该常数因子是通过
 预先运行获得的。另一种方法是，Gamerman的加权最小二乘方案或一个轻微的修改，这种方法在观测模型包
 含一个或多个随机斜率参数和随机截距时变得特别有吸引力。通过与非参数项的方差参数 $\tau_j^2$ 类比，
-$v^2$ 的充分条件又是一个反伽马分布，所以更新就可以直接进行。
+$v^2$ 的充分条件又是一个逆伽玛分布，所以更新就可以直接进行。
 
 ### 基于切片抽样的MCMC估计方法
 上面基于MH算法的MCMC方法可以用于贝叶斯广义可加混合模型的参数估计和推断。Pham 和
@@ -587,8 +587,8 @@ Zhao等(2006)给出了gammSlice支持的贝叶斯GAMM的详细数学描述[@Zhao
 由gammSlice方法支持的模型有如下一般形式：
 $$\begin{array}{ccccc}
 p(\boldsymbol{y} | \boldsymbol{\beta}, \boldsymbol{u}) \propto \exp \left(\boldsymbol{y}^{T}(\boldsymbol{X} \boldsymbol{\beta}+\boldsymbol{Z} \boldsymbol{u})-\mathbf{1}^{T} b(\boldsymbol{X} \boldsymbol{\beta}+\boldsymbol{Z} \boldsymbol{u})\right)
-\\\boldsymbol{u}=\left[\begin{array}{c}{\boldsymbol{u}_{1}} \\ {\boldsymbol{u}_{2}} \\ {\vdots} \\ {\boldsymbol{u}_{L}}\end{array}\right] | \sigma_{1}^{2}, \ldots, \sigma_{L}^{2} \sim N\left(\mathbf{0},\left[\begin{array}{cccc}{\sigma_{1}^{2} \boldsymbol{I}_{q_{1}}} & {\mathbf{0}} & {\cdots} & {\mathbf{0}} \\ {\mathbf{0}} & {\sigma_{2}^{2} \boldsymbol{I}_{q_{2}}} & {\cdots} & {\mathbf{0}} \\ {\vdots} & {\vdots} & {\ddots} & {\mathbf{0}} \\ {\mathbf{0}} & {\mathbf{0}} & {\cdots} & {\sigma_{L}^{2} \boldsymbol{I}_{q_{L}}}\end{array}\right]\right)
-\\ \beta \sim \mathrm{N}\left(0, \sigma_{\beta}^{2} \boldsymbol{I}\right), \quad \sigma_{\ell}\stackrel{\mathrm{ind}}{\sim} \text { Half-Cauchy }\left(A_{\ell}\right), 1 \leqslant \ell \leqslant L \end{array}$$ {#eq:m-18-14}
+\\\boldsymbol{u}=\left[\begin{array}{c}{\boldsymbol{u}_{1}} \\ {\boldsymbol{u}_{2}} \\ {\vdots} \\ {\boldsymbol{u}_{L}}\end{array}\right] | \sigma_{1}^{2}, \ldots, \sigma_{L}^{2} \sim \mathcal{N}\left(\mathbf{0},\left[\begin{array}{cccc}{\sigma_{1}^{2} \boldsymbol{I}_{q_{1}}} & {\mathbf{0}} & {\cdots} & {\mathbf{0}} \\ {\mathbf{0}} & {\sigma_{2}^{2} \boldsymbol{I}_{q_{2}}} & {\cdots} & {\mathbf{0}} \\ {\vdots} & {\vdots} & {\ddots} & {\mathbf{0}} \\ {\mathbf{0}} & {\mathbf{0}} & {\cdots} & {\sigma_{L}^{2} \boldsymbol{I}_{q_{L}}}\end{array}\right]\right)
+\\ \beta \sim \mathcal{N}\left(0, \sigma_{\beta}^{2} \boldsymbol{I}\right), \quad \sigma_{\ell}\stackrel{\mathrm{ind}}{\sim} \text { Half-Cauchy }\left(A_{\ell}\right), 1 \leqslant \ell \leqslant L \end{array}$$ {#eq:m-18-14}
 
 [@eq:m-18-14]中的符号意义如下： $\boldsymbol \beta$ 是所有固定效应参数的向量，
 $\boldsymbol{X}$ 表示固定效应设计矩阵， $\boldsymbol{u}$ 是所有随机效应参数的向
@@ -606,7 +606,7 @@ $z_{2k}\left(x_{2 i j}\right)$ 。
 $$\sigma \sim \text { Half-Cauchy }(A) \quad \text {当且仅当}\left\{\begin{array}{l}{\sigma^{2} | a \sim \text { 逆Gamma }(1 / 2,1 / a)} \\ {a \sim 
 \text { 逆Gamma }\left(1 / 2,1 / A^{2}\right)}\end{array}\right.$$ {#eq:m-18-15}
 其中， $x \sim$ 逆Gamma( $k$ , $\lambda$ ) 意味着 $x$ 有一个形状参数为 $k$ ,比率参数
-为 $\lambda$ 的逆伽马分布。逆伽马分布的密度函数为：
+为 $\lambda$ 的逆伽玛分布。逆伽玛分布的密度函数为：
 $$p(x)=\lambda^{\kappa} \Gamma(\kappa)^{-1} x^{-\kappa-1} \exp (-\lambda / x), \quad x>0$$ 
 因此我们将[@eq:m-18-15]中的 $\sigma_{\ell} \stackrel{\mathrm{ind}}{\sim}$ Half-Cauchy $\left(A_{\ell}\right)$ 替换为：
 $$\sigma_{\ell}^{2} | a_{\ell} \sim \text { 逆Gamma }\left(1 / 2,1 / a_{\ell}\right), \quad a_{\ell} \sim \text { 逆Gamma }\left(1 / 2,1 / A_{\ell}^{2}\right)$$
