--- a/report/06-excel-gamm.Rmd
+++ b/report/06-excel-gamm.Rmd
@@ -30,7 +30,7 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 
 
-# 基于广义可加混合模型的城市空气质量为优天数影响因素分析
+# 基于广义可加混合模型的空气质量为优天数影响因素分析 {#sec:chap-6}
 
 上一章我们对城市空气质量的基本状况及其影响因素的基本状况进行了概述，并分析了空气
 质量指数的时空间分布特征。从中可以发现，影响城市空气质量好坏的原因很复杂，并不是
