--- a/report/Bibfile.bib
+++ b/report/Bibfile.bib
@@ -1,11 +1,29 @@
 % Encoding: UTF-8
 
+@Standard{aqi,
+   title   = {环境空气质量指数(AQI)技术规定(试行)},
+   publisher={中国环境科学出版社} ,
+  address   = {北京},
+  year    = {2012},
+  author  = {HJ633-2012},
+}   
+   
 @Book{BOLSTAD2017,
-  title   = {INTRODUCTION TO BAYESIAN STATISTICS},
-  year    = {2017},
-  author  = {WILLIAM M. BOLSTAD, JAMES M. CURRAN},
+title={Introduction to Bayesian statistics},
+  author={Bolstad, William M and Curran, James M},
+  year={2017},
+  publisher={John Wiley \& Sons},   
   edition = {Third Edition},
-}
+   }
+
+@Book{Jin2016,
+title={半参数回归模型及其应用},
+  author={金林},
+  year={2016},
+   publisher={世界图书出版公司},
+   address   = {广州},
+
+}   
 
 @Article{Neal2003a,
   author    = {Radford M. Neal},
@@ -156,6 +174,7 @@
   author   = {张继磊},
   title    = {GAMM在非寿险公司未决赔款准备金评估中的运用研究},
   school   = {湖南大学},
+  address   = {长沙},
   year     = {2009},
   keywords = {未决赔款准备金;;广义加法混合模型;;马尔科夫蒙特卡洛},
 }
@@ -175,6 +194,7 @@
   author   = {陈小驽},
   title    = {基于切片抽样MCMC方法的比较分析},
   school   = {四川大学},
+  address   = {成都},
   year     = {2007},
   keywords = {贝叶斯推断;;切片抽样;;MCMC;;Gibbs抽样},
 }
